--- a/Battleships-android/AndroidManifest.xml
+++ b/Battleships-android/AndroidManifest.xml
@@ -5,6 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -20,6 +22,5 @@
             </intent-filter>
         </activity>
     </application>
-<uses-permission android:name="android.permission.WAKE_LOCK"/>
     
 </manifest>
