--- a/Battleships-android/AndroidManifest.xml
+++ b/Battleships-android/AndroidManifest.xml
@@ -14,12 +14,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        <activity
-            android:name="com.me.Battleships.MainActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
-        </activity>
+        
         <activity
             android:name="com.me.Battleships.LobbyActivity"
             android:label="@string/title_activity_lobby"
@@ -29,6 +24,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.me.Battleships.GameActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
