--- a/Battleships-android/AndroidManifest.xml
+++ b/Battleships-android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.me.Battleships"
+    package="com.sohvastudios.battleships.core"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,8 +16,7 @@
         android:label="@string/app_name" >
         
         <activity
-            android:name="com.me.Battleships.LobbyActivity"
-            android:label="@string/title_activity_lobby"
+            android:name=".LobbyActivity"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +26,7 @@
         </activity>
         
         <activity
-            android:name="com.me.Battleships.GameActivity"
+            android:name=".GameActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
