--- a/Battleships-android/AndroidManifest.xml
+++ b/Battleships-android/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
+        <service
+            android:name=".SocketService" >
+        </service>
     </application>
 
 </manifest>
